--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<body>
 		  <h1>Учусь Git'у с нуля!</h1>
             <p>Новое изменение файла index.html!</p>
+            <h6>Третье изменение файла index.html</h6>
         </body>
 	</head>
 </html>
